; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_inet_hashtables.c_hash_seq_show.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_inet_hashtables.c_hash_seq_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { i32 }
%struct.inet_hash_stats = type { i32, i32, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [41 x i8] c"%u\09%-15lu%-15lu%-15lu%-15lu%-15lu%-15lu\0A\00", align 1
@cpu_id = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.seq_file*, i8*)* @hash_seq_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hash_seq_show(%struct.seq_file* %0, i8* %1) #0 {
  %3 = alloca %struct.seq_file*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.inet_hash_stats*, align 8
  store %struct.seq_file* %0, %struct.seq_file** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.inet_hash_stats*
  store %struct.inet_hash_stats* %7, %struct.inet_hash_stats** %5, align 8
  %8 = load %struct.seq_file*, %struct.seq_file** %3, align 8
  %9 = load i32, i32* @cpu_id, align 4
  %10 = load %struct.inet_hash_stats*, %struct.inet_hash_stats** %5, align 8
  %11 = getelementptr inbounds %struct.inet_hash_stats, %struct.inet_hash_stats* %10, i32 0, i32 5
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.inet_hash_stats*, %struct.inet_hash_stats** %5, align 8
  %14 = getelementptr inbounds %struct.inet_hash_stats, %struct.inet_hash_stats* %13, i32 0, i32 4
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.inet_hash_stats*, %struct.inet_hash_stats** %5, align 8
  %17 = getelementptr inbounds %struct.inet_hash_stats, %struct.inet_hash_stats* %16, i32 0, i32 3
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.inet_hash_stats*, %struct.inet_hash_stats** %5, align 8
  %20 = getelementptr inbounds %struct.inet_hash_stats, %struct.inet_hash_stats* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.inet_hash_stats*, %struct.inet_hash_stats** %5, align 8
  %23 = getelementptr inbounds %struct.inet_hash_stats, %struct.inet_hash_stats* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.inet_hash_stats*, %struct.inet_hash_stats** %5, align 8
  %26 = getelementptr inbounds %struct.inet_hash_stats, %struct.inet_hash_stats* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @seq_printf(%struct.seq_file* %8, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %9, i32 %12, i32 %15, i32 %18, i32 %21, i32 %24, i32 %27)
  ret i32 0
}

declare dso_local i32 @seq_printf(%struct.seq_file*, i8*, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
